--- a/components/camel-hazelcast/src/main/docs/hazelcast-set-component.adoc
+++ b/components/camel-hazelcast/src/main/docs/hazelcast-set-component.adoc
@@ -1,5 +1,5 @@
 = Hazelcast Set Component
-:doctitle: Hazelcast Set
+:doctitle: Set
 :shortname: hazelcast-set
 :artifactid: camel-hazelcast
 :description: Perform operations on Hazelcast distributed set.
