--- a/components/camel-hazelcast/src/main/docs/hazelcast-queue-component.adoc
+++ b/components/camel-hazelcast/src/main/docs/hazelcast-queue-component.adoc
@@ -1,5 +1,5 @@
 = Hazelcast Queue Component
-:doctitle: Hazelcast Queue
+:doctitle: Queue
 :shortname: hazelcast-queue
 :artifactid: camel-hazelcast
 :description: Perform operations on Hazelcast distributed queue.
