--- a/components/camel-ignite/src/main/docs/ignite-messaging-component.adoc
+++ b/components/camel-ignite/src/main/docs/ignite-messaging-component.adoc
@@ -1,5 +1,5 @@
 = Ignite Messaging Component
-:doctitle: Ignite Messaging
+:doctitle: Messaging
 :shortname: ignite-messaging
 :artifactid: camel-ignite
 :description: Send and receive messages from an Ignite topic.
