--- a/components/camel-ignite/src/main/docs/ignite-queue-component.adoc
+++ b/components/camel-ignite/src/main/docs/ignite-queue-component.adoc
@@ -1,5 +1,5 @@
 = Ignite Queues Component
-:doctitle: Ignite Queues
+:doctitle: Queues
 :shortname: ignite-queue
 :artifactid: camel-ignite
 :description: Interact with Ignite Queue data structures.
