--- a/components/camel-kubernetes/src/main/docs/kubernetes-secrets-component.adoc
+++ b/components/camel-kubernetes/src/main/docs/kubernetes-secrets-component.adoc
@@ -1,5 +1,5 @@
 = Kubernetes Secrets Component
-:doctitle: Kubernetes Secrets
+:doctitle: Secrets
 :shortname: kubernetes-secrets
 :artifactid: camel-kubernetes
 :description: Perform operations on Kubernetes Secrets.
@@ -156,7 +156,7 @@ Which reduces the route to:
 
 == Automatic Camel context reloading on Secret Refresh
 
-Being able to reload Camel context on a Secret Refresh could be done by specifying the following properties: 
+Being able to reload Camel context on a Secret Refresh could be done by specifying the following properties:
 
 [source,properties]
 ----
