--- a/components/camel-kubernetes/src/main/docs/kubernetes-service-accounts-component.adoc
+++ b/components/camel-kubernetes/src/main/docs/kubernetes-service-accounts-component.adoc
@@ -1,5 +1,5 @@
 = Kubernetes Service Account Component
-:doctitle: Kubernetes Service Account
+:doctitle: Service Account
 :shortname: kubernetes-service-accounts
 :artifactid: camel-kubernetes
 :description: Perform operations on Kubernetes Service Accounts.
