--- a/components/camel-kubernetes/src/main/docs/kubernetes-services-component.adoc
+++ b/components/camel-kubernetes/src/main/docs/kubernetes-services-component.adoc
@@ -1,5 +1,5 @@
 = Kubernetes Services Component
-:doctitle: Kubernetes Services
+:doctitle: Services
 :shortname: kubernetes-services
 :artifactid: camel-kubernetes
 :description: Perform operations on Kubernetes Services and get notified on Service changes.
