--- a/components/camel-kubernetes/src/main/docs/kubernetes-cronjob-component.adoc
+++ b/components/camel-kubernetes/src/main/docs/kubernetes-cronjob-component.adoc
@@ -1,5 +1,5 @@
 = Kubernetes Cronjob Component
-:doctitle: Kubernetes Cronjob
+:doctitle: Cronjob
 :shortname: kubernetes-cronjob
 :artifactid: camel-kubernetes
 :description: Perform operations on Kubernetes CronJob.
