chore(docs): Remove OpenStack prefix from doc titles

--- a/components/camel-openstack/src/main/docs/openstack-cinder-component.adoc
+++ b/components/camel-openstack/src/main/docs/openstack-cinder-component.adoc
@@ -1,5 +1,5 @@
 = OpenStack Cinder Component
-:doctitle: OpenStack Cinder
+:doctitle: Cinder
 :shortname: openstack-cinder
 :artifactid: camel-openstack
 :description: Access data in OpenStack Cinder block storage.
