--- a/components/camel-openstack/src/main/docs/openstack-neutron-component.adoc
+++ b/components/camel-openstack/src/main/docs/openstack-neutron-component.adoc
@@ -1,5 +1,5 @@
 = OpenStack Neutron Component
-:doctitle: OpenStack Neutron
+:doctitle: Neutron
 :shortname: openstack-neutron
 :artifactid: camel-openstack
 :description: Access OpenStack Neutron for network services.
