CAMEL-22354: dataformats - Align all data formats getter setters to model

--- a/docs/user-manual/modules/ROOT/pages/camel-4x-upgrade-guide-4_15.adoc
+++ b/docs/user-manual/modules/ROOT/pages/camel-4x-upgrade-guide-4_15.adoc
@@ -18,6 +18,7 @@ to their implementation using reflection-free configurers. A few data formats ha
 |crypto|initVectorRef|initVector
 |csv|formatRef|format
 |csv|formatName|format
+|flatpack|parserFactoryRef|parserFactory
 |===
 
 And in XML DSL the csv dataformat have changed `header` from a `List<String>` to be a single `String`
