CAMEL-22354: dataformats - Align all data formats getter setters to model

--- a/docs/user-manual/modules/ROOT/pages/camel-4x-upgrade-guide-4_15.adoc
+++ b/docs/user-manual/modules/ROOT/pages/camel-4x-upgrade-guide-4_15.adoc
@@ -19,6 +19,9 @@ to their implementation using reflection-free configurers. A few data formats ha
 |csv|formatRef|format
 |csv|formatName|format
 |flatpack|parserFactoryRef|parserFactory
+|jaxb|namespacePrefixRef|namespacePrefix
+|soap|namespacePrefixRef|namespacePrefix
+|soap|elementNameStrategyRef|elementNameStrategy
 |===
 
 And in XML DSL the csv dataformat have changed `header` from a `List<String>` to be a single `String`
