CAMEL-22354: dataformats - Align all data formats getter setters to model

--- a/docs/user-manual/modules/ROOT/pages/camel-4x-upgrade-guide-4_15.adoc
+++ b/docs/user-manual/modules/ROOT/pages/camel-4x-upgrade-guide-4_15.adoc
@@ -47,3 +47,5 @@ Should be changed to:
 <csv format="EXCEL" delimiter="|" skipHeaderRecord="true" header="orderId,amount"/>
 ----
 
+Removed the `tidyMarkup` DataFormat in the DSL as the implementation has been removed in earlier version,
+but we forgot to remove it from the DSL model.
