CAMEL-22354: dataformats - Align all data formats getter setters to model

--- a/docs/user-manual/modules/ROOT/pages/camel-4x-upgrade-guide-4_15.adoc
+++ b/docs/user-manual/modules/ROOT/pages/camel-4x-upgrade-guide-4_15.adoc
@@ -24,6 +24,7 @@ to their implementation using reflection-free configurers. A few data formats ha
 |soap|elementNameStrategyRef|elementNameStrategy
 |swiftMx|readConfigRef|readConfig
 |swiftMx|writeConfigRef|writeConfig
+|xmlSecurity|keyOrTrustStoreParametersRef|keyOrTrustStoreParameters
 |===
 
 And in XML DSL the csv dataformat have changed `header` from a `List<String>` to be a single `String`
